# url_shortener

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: CMakeLists.txt
backend/core/: thread_pool.hpp
backend/src/: main.cpp
backend/src/concurrency/: CMakeLists.txt  safequeue.cpp  safequeue.hpp  threadpool.cpp  threadpool.hpp
backend/src/concurrency/queue/: queue.hpp
backend/src/concurrency/threadpool/: threadpool.cpp  threadpool.hpp
backend/src/core/: CMakeLists.txt  types.hpp
backend/src/logic/: CMakeLists.txt  in_memory_url_repository.cpp  in_memory_url_repository.hpp  shortener.cpp  shortener.hpp  url_repository.hpp  url_service.cpp  url_service.hpp
backend/src/network/: CMakeLists.txt  server.cpp  server.hpp  session.cpp  session.hpp
backend/src/network/server/: server.cpp  server.hpp
backend/src/network/session/: http_session.cpp  http_session.hpp  session.cpp  session.hpp
backend/src/repositories/: CMakeLists.txt  url_repository.hpp  user_repository.hpp
backend/src/repositories/in_memory/: CMakeLists.txt
backend/src/repositories/in_memory/urls/: in_memory_url_repository.hpp
backend/src/repositories/in_memory/users/: in_memory_user_repository.cpp
backend/src/repositories/postgres/: CMakeLists.txt
backend/src/repositories/postgres/urls/: postgres_url_repository.cpp  postgres_url_repository.hpp
backend/src/repositories/postgres/users/: postgres_user_repository.cpp  postgres_user_repository.hpp
backend/src/repositories/urls/: CMakeLists.txt  in_memory_url_repository.cpp  in_memory_url_repository.hpp
backend/src/repositories/users/: CMakeLists.txt  in_memory_user_repository.hpp
backend/src/shortener/: shortener.cpp  shortener.hpp
frontend/: api_client.py  app.py  main_window.py
migrations/: 001_init.sql
src/app/: main.cpp
src/app/config/: CMakeLists.txt  config.cpp  config.hpp
src/concurrency/: CMakeLists.txt
src/concurrency/queue/: queue.hpp
src/entities/: CMakeLists.txt  entities.hpp
src/logic/: CMakeLists.txt  url_service.cpp  url_service.hpp
src/network/: CMakeLists.txt
src/network/server/: server.cpp  server.hpp
src/network/session/: http_session.cpp  http_session.hpp
src/repositories/: CMakeLists.txt  url_repository.hpp
src/repositories/cache/: CMakeLists.txt  cache.hpp
src/repositories/cache/redis/: redis_cache.cpp  redis_cache.hpp
src/repositories/in_memory/urls/: in_memory_url_repository.cpp  in_memory_url_repository.hpp
src/repositories/in_memory/users/: in_memory_user_repository.hpp
src/repositories/postgres/: CMakeLists.txt  postgres_connection_pool.cpp  postgres_connection_pool.hpp
src/repositories/postgres/urls/: postgres_url_repository.cpp  postgres_url_repository.hpp
src/repositories/postgres/users/: postgres_user_repository.cpp  postgres_user_repository.hpp
tests/: CMakeLists.txt
tests/integration/: test_http_api.py
tests/load/: conftest.py  helpers.py  test_mixed.py  test_redirect.py  test_shorten.py
tests/unit/: test_config.cpp
tests/unit_tests/: test_queue.cpp  test_url_service.cpp
